update-text in nav-hero

--- a/0729-Boostrap/index.html
+++ b/0729-Boostrap/index.html
@@ -105,9 +105,9 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>Would you like to lay on bed ?</h1>
-										<h2>Asked by your lonely soft pillow</h2>
-										<p><a class="btn btn-primary btn-demo" href="#"></i> SURE!</a> <a class="btn btn-primary btn-learn">Of course</a></p>
+				   					<h1>Traditional & Creative</h1>
+										<h2>台灣傳統產業的創新</h2>
+										<p><a class="btn btn-primary btn-demo" href="#"></i> 了解更多</a> <a class="btn btn-primary btn-learn">More</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -119,9 +119,9 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-md-push-3 slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>Me too!</h1>
-										<h2>Getting enough sleep is good for our health</h2>
-										<p><a class="btn btn-primary btn-demo" href="#"></i> go to bed</a> <a class="btn btn-primary btn-learn">stay awake</a></p>
+				   					<h1>Bamboo furnitures</h1>
+										<h2>竹器工藝</h2>
+										<p><a class="btn btn-primary btn-demo" href="#"></i>我想了解！</a> <a class="btn btn-primary btn-learn">More</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -133,9 +133,9 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 slider-text">
 				   				<div class="slider-text-inner text-center">
-				   					<h1>Hey ! Don't Leave !</h1>
-										<h2>Let you see my cute pet</h2>
-										<p><a class="btn btn-primary btn-demo" href="#"></i> OK</a> <a class="btn btn-primary btn-learn">next</a></p>
+				   					<h1>...are gradually fading out from people's memory</h1>
+										<h2>正逐漸被時代遺忘</h2>
+										<p><a class="btn btn-primary btn-demo" href="#"></i> 我不想忘記！</a> <a class="btn btn-primary btn-learn">next</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -147,9 +147,9 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-md-push-3 slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>Here you go</h1>
-										<h2>Oh so sweet ! Isn't it ?</h2>
-										<p><a class="btn btn-primary btn-demo" href="#"></i> WOW</a> <a class="btn btn-primary btn-learn">lovely</a></p>
+				   					<h1>Let's tell a story about BAMBOO</h1>
+										<h2>請聽我們訴說竹椅的故事</h2>
+										<p><a class="btn btn-primary btn-demo" href="#"></i> 好</a> <a class="btn btn-primary btn-learn">OK</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -166,8 +166,8 @@
 							<i class="icon-diamond"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Brand Identity</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h3><a href="#">Elegant & Nature</a></h3>
+							<p>天然的紋路為竹器穿上優美外衣<br>讓它們獨一無二</p>
 						</div>
 					</div>
 				</div>
@@ -177,7 +177,7 @@
 							<i class="icon-lab2"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Web Design &amp; UI</a></h3>
+							<h3><a href="#">實用</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 						</div>
 					</div>
@@ -188,7 +188,7 @@
 							<i class="icon-settings"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Web Development</a></h3>
+							<h3><a href="#">智慧</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 						</div>
 					</div>
