--- a/0729-Boostrap/index.html
+++ b/0729-Boostrap/index.html
@@ -99,7 +99,7 @@
 		<aside id="fh5co-hero"> 
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(images/img_bg_1.jpg);">
+			   	<li style="background-image: url(images01/img_bg_1.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
@@ -113,7 +113,7 @@
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/img_bg_2.jpg);">
+			   	<li style="background-image: url(images01/img_bg_2.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
@@ -127,11 +127,11 @@
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/img_bg_3.jpg);">
+			   	<li style="background-image: url(images01/img_bg_3.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container-fluids">
 			   			<div class="row">
-				   			<div class="col-md-6 col-md-offset-3 slider-text">
+				   			<div class="col-md-6 col-md-offset-3 text-white slider-text">
 				   				<div class="slider-text-inner text-center">
 				   					<h1>...are gradually fading out from people's memory</h1>
 										<h2>正逐漸被時代遺忘</h2>
@@ -141,7 +141,7 @@
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/img_bg_4.jpg);">
+			   	<li style="background-image: url(images01/img_bg_4.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
@@ -177,8 +177,10 @@
 							<i class="icon-lab2"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">實用</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h3><a href="#">
+								Functional</a></h3>
+							<p>形式百變多樣，高矮寬瘦皆可打造<br>
+							結構穩固歷久不衰</p>
 						</div>
 					</div>
 				</div>
@@ -188,8 +190,9 @@
 							<i class="icon-settings"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">智慧</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h3><a href="#">Wisdom</a></h3>
+							<p>飽含歷史韻味<br>
+							時代精神淵遠流傳</p>
 						</div>
 					</div>
 				</div>
@@ -199,8 +202,8 @@
 		<div id="fh5co-work" class="fh5co-light-grey">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Work</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Works</h2>
+					<p>竹器工藝作品</p>
 				</div>
 			</div>
 			<div class="row">
