update hero link_button

--- a/0729-Boostrap/index.html
+++ b/0729-Boostrap/index.html
@@ -107,7 +107,7 @@
 				   				<div class="slider-text-inner">
 				   					<h1>Psittacines</h1>
 										<h2>are birds of the roughly 393 species in 92 genera comprising the order Psittaciformes</h2>
-										<p><a class="btn btn-primary btn-demo" href="#"></i> See</a> <a class="btn btn-primary btn-learn">More</a></p>
+										<p><a class="btn btn-primary btn-demo" href="#"></i>OK</a> <a class="btn btn-primary btn-learn" href="https://en.wikipedia.org/wiki/Parrot" target="_blank"></i>More</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -121,7 +121,7 @@
 				   				<div class="slider-text-inner">
 				   					<h1>Characteristic features of parrots</h1>
 										<h2>a strong, curved bill, an upright stance, strong legs, and clawed zygodactyl feet</h2>
-										<p><a class="btn btn-primary btn-demo" href="#"></i>See</a> <a class="btn btn-primary btn-learn">More</a></p>
+										<p><a class="btn btn-primary btn-demo" href="#"></i>OK</a> <a class="btn btn-primary btn-learn" href="https://en.wikipedia.org/wiki/Parrot" target="_blank"></i>More</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -135,7 +135,7 @@
 				   				<div class="slider-text-inner text-center">
 				   					<h1>Mostly live in tropical and subtropical regions</h1>
 										<h2>including Australia and Oceania, South Asia, Southeast Asia, Central America, South America, and Africa</h2>
-										<p><a class="btn btn-primary btn-demo" href="#"></i> See</a> <a class="btn btn-primary btn-learn">More</a></p>
+										<p><a class="btn btn-primary btn-demo" href="#"></i>OK</a> <a class="btn btn-primary btn-learn" href="https://en.wikipedia.org/wiki/Parrot" target="_blank"></i>More</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -149,7 +149,7 @@
 				   				<div class="slider-text-inner">
 				   					<h1>Parrots are considered the most intelligent of birds</h1>
 										<h2>The brain-to-body size ratio of psittacines and corvines is comparable to that of higher primates</h2>
-										<p><a class="btn btn-primary btn-demo" href="#"></i> See</a> <a class="btn btn-primary btn-learn">More</a></p>
+										<p><a class="btn btn-primary btn-demo" href="#"></i>OK</a> <a class="btn btn-primary btn-learn" href="https://en.wikipedia.org/wiki/Parrot" target="_blank"></i>More</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
