work-singles contentOK,linked

--- a/0729-Boostrap/index.html
+++ b/0729-Boostrap/index.html
@@ -76,7 +76,7 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="work.html">Work</a></li>
+							<li><a href="#fh5co-work">Work</a></li>
 							<!-- <li class="has-dropdown">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
@@ -166,8 +166,8 @@
 							<i class="icon-diamond"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Elegant & Nature</a></h3>
-							<p>天然的紋路為竹器穿上優美外衣<br>讓它們獨一無二</p>
+							<h3><a href="#">Elegant</a></h3>
+							<p>Parrot species kept in captivity because of they are very colorful</p>
 						</div>
 					</div>
 				</div>
@@ -178,9 +178,8 @@
 						</span>
 						<div class="desc">
 							<h3><a href="#">
-								Functional</a></h3>
-							<p>形式百變多樣，高矮寬瘦皆可打造<br>
-							結構穩固歷久不衰</p>
+								Popularity as Pets</a></h3>
+							<p>These birds have been popular companions throughout history because they are intelligent, charismatic, colorful, and musical</p>
 						</div>
 					</div>
 				</div>
@@ -190,9 +189,8 @@
 							<i class="icon-settings"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Wisdom</a></h3>
-							<p>飽含歷史韻味<br>
-							時代精神淵遠流傳</p>
+							<h3><a href="#">Culture</a></h3>
+							<p>They have a long history as pets, stretching back thousands of years, and were often kept as a symbol of royalty or wealth</p>
 						</div>
 					</div>
 				</div>
@@ -208,7 +206,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work"  style="background-image: url(images01/portfolio-1.jpg);">
+					<a href="work-single-0.html" class="work"  style="background-image: url(images01/portfolio-1.jpg);">
 						<div class="desc">
 							<h3>Psittacoidea</h3>
 							<span>true parrots</span>
@@ -216,7 +214,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images01/portfolio-2.jpg);">
+					<a href="work-single-1.html" class="work" style="background-image: url(images01/portfolio-2.jpg);">
 						<div class="desc">
 							<h3>Cacatuoidea</h3>
 							<span>cockatoos</span>
@@ -224,7 +222,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images01/portfolio-3.jpg);">
+					<a href="work-single-2.html" class="work" style="background-image: url(images01/portfolio-3.jpg);">
 						<div class="desc">
 							<h3>Strigopoidea</h3>
 							<span>New Zealand parrots</span>
