--- a/0729-Boostrap/footer.html
+++ b/0729-Boostrap/footer.html
@@ -26,7 +26,7 @@
             <div class="col-md-3 col-md-push-1">
                 <h4>Links</h4>
                 <ul class="fh5co-footer-links">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#fh5co-work">Parrots</a></li>
                     <li><a href="#fh5co-blog">Groups</a></li>
                     <li><a href="about.html">About us</a></li>
