--- a/0729-Boostrap/nav.html
+++ b/0729-Boostrap/nav.html
@@ -16,7 +16,7 @@
                     <div class="col-xs-10 text-right menu-1">
                         <ul>
                             <li class="active"><a href="index.html">Home</a></li>
-                            <li><a href="#fh5co-work">Parrots</a></li>
+                            <li><a href="index.html#fh5co-work">Parrots</a></li>
                             <!-- <li class="has-dropdown">
                                 <a href="blog.html">Blog</a>
                                 <ul class="dropdown">
