--- a/0729-Boostrap/contact.html
+++ b/0729-Boostrap/contact.html
@@ -71,14 +71,14 @@
 		<aside id="fh5co-hero">
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(images/img_bg_3.jpg);">
+			   	<li style="background-image: url(images01/img_bg_2.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container-fluids">
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 slider-text slider-text-bg">
 				   				<div class="slider-text-inner text-center">
 				   					<h1>Contact</h1>
-										<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+										<h2>Happy to see you!</h2>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -91,17 +91,18 @@
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h2>Contact us</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+					<p>Welcome to share your experience about foster parrots!<br>
+					or If any questions want to ask.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 col-md-push-1 animate-box">
 					<h3>Our Address</h3>
 					<ul class="contact-info">
-						<li><i class="icon-location4"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="icon-phone3"></i>+ 1235 2355 98</li>
-						<li><i class="icon-location3"></i><a href="#">info@yoursite.com</a></li>
-						<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+						<li><i class="icon-location4"></i>Taichung, Taiwan</li>
+						<li><i class="icon-phone3"></i>+ 0932 105 190</li>
+						<li><i class="icon-location3"></i><a href="#">esther_lin@mail.chungyo.net</a></li>
+						<li><i class="icon-globe2"></i><a href="#">lamoo990069@gmail.com</a></li>
 					</ul>
 				</div>
 				<div class="col-md-7 col-md-push-1 animate-box">
