--- a/0814_js-ajax-db/public/index.html
+++ b/0814_js-ajax-db/public/index.html
@@ -25,13 +25,82 @@
 
     <div class="row">
 
-        <div class="col-sm-4">
+        <div class="col-sm-6">
             <h2>最新消息<span class="pull-right"><button id="newItem" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button></span></h2>
-            <ul id="latestNews" class="list-group">
-                <li class="list-group-item">First item<span class="pull-right"><button class="btn btn-info btn-xs editItem"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>&nbsp;<button class="btn btn-danger btn-xs deleteItem"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button></span></li>
-                <li class="list-group-item">Second item<span class="pull-right"><button class="btn btn-info btn-xs editItem"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>&nbsp;<button class="btn btn-danger btn-xs deleteItem"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button></span></li>
-                <li class="list-group-item">Third item<span class="pull-right"><button class="btn btn-info btn-xs editItem"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>&nbsp;<button class="btn btn-danger btn-xs deleteItem"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button></span></li>
-            </ul>
+            <div id="latestNews" class="panel-group">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title pt">
+                            <a data-toggle="collapse" href="#collapse1">
+                                news1.
+                            </a>                        
+                            <span class="pull-right">
+                                <button class="btn btn-info btn-xs editItem">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </button>&nbsp;
+                                <button class="btn btn-danger btn-xs deleteItem">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                            </span>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            Nihil anim keffiyeh helvetica, craft beer labore wes anderson 
+                            cred nesciunt sapiente ea proident. Ad vegan excepteur butcher 
+                            vice lomo.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title pt">
+                            <a data-toggle="collapse" href="#collapse2">
+                                news2.
+                            </a>                        
+                            <span class="pull-right">
+                                <button class="btn btn-info btn-xs editItem">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </button>&nbsp;
+                                <button class="btn btn-danger btn-xs deleteItem">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                            </span>
+                        </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            Nihil anim keffiyeh helvetica, craft beer labore wes anderson 
+                            cred nesciunt sapiente ea proident. Ad vegan excepteur butcher 
+                            vice lomo.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title pt">
+                            <a data-toggle="collapse" href="#collapse3">
+                                news2.
+                            </a>                        
+                            <span class="pull-right">
+                                <button class="btn btn-info btn-xs editItem">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </button>&nbsp;
+                                <button class="btn btn-danger btn-xs deleteItem">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                            </span>
+                        </h4>
+                    </div>
+                    <div id="collapse3" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            Nihil anim keffiyeh helvetica, craft beer labore wes anderson 
+                            cred nesciunt sapiente ea proident. Ad vegan excepteur butcher 
+                            vice lomo.
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="col-sm-4">
@@ -165,4 +234,10 @@ $(function () {
 </script>
 
 </body>
+<style>
+    .pt{
+    background-color: inherit;
+    text-align: left;
+    }
+</style>
 </html>
