--- a/0814_js-ajax-db/public/index.html
+++ b/0814_js-ajax-db/public/index.html
@@ -212,17 +212,32 @@ function showToast(heading, message) {
 <script>
 
 $(function () {
+    
+
+    function getPanel(index){
+        var $cPanel = $(".panel").eq(0).html();
+        var re = /collapse\d/g;
+        //console.log($cPanel.replace(re,"collapse" + index));
+        return $cPanel.replace(re,"collapse" + index);
+    }
 
     var newsList =
     [
-        { ymd: "2017-05-01", title: "Item 1" },
-        { ymd: "2017-05-01", title: "Item 2" },
-        { ymd: "2017-05-02", title: "Item 3" },
-        { ymd: "2017-05-03", title: "Item 4" },
-        { ymd: "2017-05-04", title: "Item 5" }
+        { ymd: "2017-05-01", title: "Item 1", content: "test" },
+        { ymd: "2017-05-01", title: "Item 2", content: "test" },
+        { ymd: "2017-05-02", title: "Item 3", content: "test" },
+
     ];
 
-    // 練習與任務:
+    // 01.印出假資料
+    $.each(newsList, function(key, obj){
+        var title = `${obj.ymd}| ${obj.title}`;
+        var content = obj.content;
+        
+        var $panelItem = getPanel(key+1);
+        console.log($panelItem);
+
+    })
 
 
 
