--- a/0814_js-ajax-db/public/index.html
+++ b/0814_js-ajax-db/public/index.html
@@ -80,7 +80,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h5>新增/修改</h5>
+                <h4>新增/修改</h4>
             </div>
             <div class="modal-body">
                 <form>
@@ -224,6 +224,9 @@ $(function () {
     //03. add modal-box （右上角的＋）
     $("#newItem").click(function(){
         currentIndex = -1;
+        $(".form-group").find(":text,textarea,input").each(function() {
+          $(this).val("");
+        });
         $("#newsModal").modal({backdrop:"static"});
     })
 
